<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note content ...</string>
    <string name="unknown_date">Unknown date</string>
    <string name="back_to_notes_list">Back to notes list</string>
    <string name="edit_note">Edit note</string>
    <string name="delete_note">Delete note</string>
    <string name="notes">Notes</string>
    <string name="add_new_note">Add new note</string>
    <string name="new_note">New note</string>
    <string name="save_current_note">Save current note</string>
    <string name="note_editor">Note editor</string>
</resources>