<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:height="48dp"
        android:text="@string/note_title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_to_notes_list"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit"
        app:layout_constraintTop_toTopOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_note"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete"
        app:layout_constraintTop_toTopOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_note"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/txt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/note_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

</androidx.constraintlayout.widget.ConstraintLayout>